kcp_kdp/kong-dp.yaml
---
# Source: kong/templates/service-kong-manager.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-kong-dp-kong-manager
  namespace: kong
  labels:
    app.kubernetes.io/name: kong
    helm.sh/chart: kong-2.29.0
    app.kubernetes.io/instance: "my-kong-dp"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/version: "3.4"
spec:
  type: NodePort
  ports:
  - name: kong-manager
    port: 8002
    targetPort: 8002
    protocol: TCP
  - name: kong-manager-tls
    port: 8445
    targetPort: 8445
    protocol: TCP
  selector:
    app.kubernetes.io/name: kong
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: "my-kong-dp"
---
# Source: kong/templates/service-kong-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-kong-dp-kong-proxy
  namespace: kong
  labels:
    app.kubernetes.io/name: kong
    helm.sh/chart: kong-2.29.0
    app.kubernetes.io/instance: "my-kong-dp"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/version: "3.4"
    enable-metrics: "true"
spec:
  type: LoadBalancer
  ports:
  - name: kong-proxy
    port: 80
    targetPort: 8000
    protocol: TCP
  - name: kong-proxy-tls
    port: 443
    targetPort: 8443
    protocol: TCP
  selector:
    app.kubernetes.io/name: kong
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: "my-kong-dp"
---
# Source: kong/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-kong-dp-kong
  namespace:  kong
  labels:
    app.kubernetes.io/name: kong
    helm.sh/chart: kong-2.29.0
    app.kubernetes.io/instance: "my-kong-dp"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/version: "3.4"
    app.kubernetes.io/component: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kong
      app.kubernetes.io/component: app
      app.kubernetes.io/instance: "my-kong-dp"

  template:
    metadata:
      annotations:
        kuma.io/service-account-token-volume: my-kong-dp-kong-token
        kuma.io/gateway: "enabled"
        traffic.sidecar.istio.io/includeInboundPorts: ""
      labels:
        app.kubernetes.io/name: kong
        helm.sh/chart: kong-2.29.0
        app.kubernetes.io/instance: "my-kong-dp"
        app.kubernetes.io/managed-by: "Helm"
        app.kubernetes.io/version: "3.4"
        app.kubernetes.io/component: app
        app: my-kong-dp-kong
        version: "3.4"
    spec:
      serviceAccountName: my-kong-dp-kong
      automountServiceAccountToken: false
      
      containers:
      - name: "proxy"
        image: kong:3.4.2-ubuntu
        imagePullPolicy: IfNotPresent
        securityContext:
        
          readOnlyRootFilesystem: true
        lifecycle:
          preStop:
            exec:
              command:
              - kong
              - quit
              - --wait=15
        ports:
        - name: proxy
          containerPort: 8000
          protocol: TCP
        - name: proxy-tls
          containerPort: 8443
          protocol: TCP
        - name: status
          containerPort: 8100
          protocol: TCP
        volumeMounts:
          - name: my-kong-dp-kong-prefix-dir
            mountPath: /kong_prefix/
          - name: my-kong-dp-kong-tmp
            mountPath: /tmp
          - name:  kong-cluster-cert
            mountPath: /etc/secrets/kong-cluster-cert
          
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /status/ready
            port: status
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /status
            port: status
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          {} 
      securityContext:
        {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: my-kong-dp-kong-prefix-dir
          emptyDir:
            sizeLimit: 256Mi
        - name: my-kong-dp-kong-tmp
          emptyDir:
            sizeLimit: 1Gi
        - name: my-kong-dp-kong-token
          projected:
            sources:
            - serviceAccountToken:
                expirationSeconds: 3607
                path: token
            - configMap:
                items:
                - key: ca.crt
                  path: ca.crt
                name: kube-root-ca.crt
            - downwardAPI:
                items:
                - fieldRef:
                    apiVersion: v1
                    fieldPath: metadata.namespace
                  path: namespace
        - name: kong-cluster-cert
          secret:
            secretName: kong-cluster-cert
