kcp_kdp/kongingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: httpd
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: httpd
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpd-ingress
  namespace: default
  annotations:
    konghq.com/override: httpd
    konghq.com/plugins: rate-limiting-plugin
spec:
  ingressClassName: kong
  rules:
  - host: httpd.stephende.top
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: httpd
            port:
              number: 80
